--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -147,6 +147,12 @@
   <data name="IP" xml:space="preserve">
     <value>IP</value>
   </data>
+  <data name="Location" xml:space="preserve">
+    <value>Location name</value>
+  </data>
+  <data name="LocationUUID" xml:space="preserve">
+    <value>Location UUID</value>
+  </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
   </data>
@@ -183,7 +189,13 @@
   <data name="Subnet" xml:space="preserve">
     <value>Subnet</value>
   </data>
+  <data name="Tags" xml:space="preserve">
+    <value>Tags</value>
+  </data>
   <data name="Type" xml:space="preserve">
     <value>Type</value>
+  </data>
+  <data name="UUID" xml:space="preserve">
+    <value>UUID</value>
   </data>
 </root>
