--- a/Strings/ru-RU/Login.resw
+++ b/Strings/ru-RU/Login.resw
@@ -123,6 +123,9 @@
   <data name="Login" xml:space="preserve">
     <value>Войти</value>
   </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Выйти</value>
+  </data>
   <data name="TokenPlaceholder" xml:space="preserve">
     <value>Токен...</value>
   </data>
