--- a/Strings/en-US/Login.resw
+++ b/Strings/en-US/Login.resw
@@ -123,6 +123,9 @@
   <data name="Login" xml:space="preserve">
     <value>Login</value>
   </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
   <data name="TokenPlaceholder" xml:space="preserve">
     <value>API key...</value>
   </data>
