Balance and transactions history

--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Balance" xml:space="preserve">
+    <value>Balance: %money%</value>
+  </data>
   <data name="Configuration" xml:space="preserve">
     <value>Configuration</value>
   </data>
@@ -173,6 +176,9 @@
   </data>
   <data name="Password" xml:space="preserve">
     <value>Password</value>
+  </data>
+  <data name="PaymentHistory" xml:space="preserve">
+    <value>Transaction history</value>
   </data>
   <data name="Raid" xml:space="preserve">
     <value>Raid</value>
